# indextts2-rust

./: .gitignore  @AGENT.md  @fix_plan.md  @fix_plan_phase6.md  @fix_plan_phase7.md  @fix_plan_phase8.md  @fix_plan_phase9.md  CLAUDE.md  Cargo.toml  DEBUG_STRATEGY.md  FIXES.md  PROMPT.md  RALPH_SETUP.md  README.md  push_to_github.sh  setup_github.bat
.claude/: ralph-loop.local.md  settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-diagnostic-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-wav2vec-bert-weights/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-gpt-components/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-dit-weights/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
debug/: dump_python.py
src/: lib.rs  main.rs
src/audio/: loader.rs  mel.rs  mod.rs  output.rs  resampler.rs
src/config/: model_config.rs
src/debug/: mod.rs  npy_loader.rs  validator.rs  weight_diagnostics.rs
src/inference/: mod.rs  pipeline.rs  streaming.rs
src/models/: mod.rs
src/models/emotion/: matrix.rs  mod.rs
src/models/gpt/: conformer.rs  generation.rs  kv_cache.rs  mod.rs  perceiver.rs  unified_voice.rs
src/models/s2mel/: dit.rs  flow_matching.rs  length_regulator.rs  mod.rs  weights.rs
src/models/semantic/: codec.rs  mod.rs  wav2vec_bert.rs
src/models/speaker/: campplus.rs
src/models/vocoder/: bigvgan.rs  mod.rs
src/text/: mod.rs  normalizer.rs  segmenter.rs  tokenizer.rs
src/utils/: mod.rs
tests/: integration_test.rs
